Fix slight misalignment of device image

--- a/component-lib/src/molecules/DisplayFunctionality/DisplayFunctionality.pcss
+++ b/component-lib/src/molecules/DisplayFunctionality/DisplayFunctionality.pcss
@@ -27,6 +27,7 @@
         position: relative;
         z-index: 1;
         width: 100%;
+        margin: 3px 0px 0px 2px;
     }
 
     &__image {    
